--- a/app/views/simple_captcha/_simple_captcha.erb
+++ b/app/views/simple_captcha/_simple_captcha.erb
@@ -7,6 +7,9 @@
     float: left;
   }
   .simple_captcha .simple_captcha_image {
+    float: left;
+  }
+  .simple_captcha .simple_captcha_info {
     float: right;
   }
   .simple_captcha .simple_captcha_field input {
@@ -38,5 +41,8 @@
 
   <div class='simple_captcha_image'>
     <%= simple_captcha_options[:image] %>
+  </div>
+  <div class='simple_captcha_info'>
+    <%= "&nbsp;&nbsp;&nbsp;(*必填，请输入图片中的数字)".html_safe %>
   </div>
 </div>
