--- a/app/views/home/_couponmap.html.erb
+++ b/app/views/home/_couponmap.html.erb
@@ -5,6 +5,8 @@
         map.centerAndZoom(point,16);
         // 禁止鼠标滚动，用户体验更好
         //map.enableScrollWheelZoom();
+        map.addControl(new BMap.NavigationControl());
+        //map.addControl(new BMap.NavigationControl({type: BMAP_NAVIGATION_CONTROL_ZOOM}));
 
         function addMarkerContent(point, content){
             var marker = new BMap.Marker(point);
