--- a/app/assets/stylesheets/coupon_show.css
+++ b/app/assets/stylesheets/coupon_show.css
@@ -48,16 +48,25 @@
     text-align: right;
     padding-right: 10px;
 }
-.discountInfoWrap .listCol .fRSide{
+/* for dicount type use in index and show */
+.listCol .fRSide{
     width:280px;
 }
-.discountInfoWrap .listCol .discountNum{
+.listCol .discountNum{
     color:#c00;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     font-family: '微软雅黑';
     display: inline-block;
 }
+.listCol .discountWord{
+    color: #666666;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: '微软雅黑';
+    display: inline-block;
+}
+/* end */
 .discountDetailsInfo{
     margin-top: 15px;
     margin-bottom: 35px;
