--- a/app/views/products/_index.html.haml
+++ b/app/views/products/_index.html.haml
@@ -16,10 +16,7 @@
                 .floatLeft.fRSide
                   %span= "#{get_format_time(product.begin_at)}至#{get_format_time(product.end_at)}"
               %li.listCol.clearfix
-                %label.floatLeft= t('.discount')
-                .floatLeft.fRSide
-                  %span.couponNum= product.discount
-                  = t('.discount_word')
+                = render "products/discount_type", :product => product
               %li.listCol.clearfix
                 = link_to t('.detail_button'), product_path(product), { :target => "_blank", :hidefocus=>"true", :class=>"button", :rel=>"nofollow" }
 
