--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -26,10 +26,7 @@
                 .floatLeft.fRSide
                   %span= "#{get_format_time(@product.begin_at)}至#{get_format_time(@product.end_at)}"
               %li.listCol.clearfix
-                %label.floatLeft= t('.discount')
-                .floatLeft.fRSide
-                  %span.discountNum= @product.discount
-                  = t('.discount_word')
+                = render "discount_type", :product => @product
               %li.listCol.clearfix
                 %label.floatLeft= t('.address').html_safe
                 .floatLeft.fRSide
