add new discount type

--- a/app/views/products/_discount_type.html.haml
+++ b/app/views/products/_discount_type.html.haml
@@ -9,4 +9,6 @@
     %span.discountWord= "最低"
     %span.discountNum= product.discount
     %span.discountWord= "元"
+  - when DISCOUNT_TYPE_NEW
+    %span.discountWord= product.specific
 
