--- a/app/assets/stylesheets/coupon_show.css
+++ b/app/assets/stylesheets/coupon_show.css
@@ -52,6 +52,13 @@
 .listCol .fRSide{
     width:280px;
 }
+.listCol .discountName{
+    color:#c00;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: '微软雅黑';
+    display: inline-block;
+}
 .listCol .discountNum{
     color:#c00;
     font-size: 20px;
