--- a/app/views/products/_send_coupon.html.haml
+++ b/app/views/products/_send_coupon.html.haml
@@ -2,6 +2,7 @@
   <!--[if lte IE 6]><iframe frameborder="0" src=""></iframe><![endif]-->
   .alert_out#alert_out
     %h3= t('.window_title')
+    #sub_title= t('.sub_title')
     = form_tag coupons_path do |f|
       .field-group
         = hidden_field_tag :product_id, @product.id
