add contact view

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -19,7 +19,8 @@
 .ftbox
   %h3 公司信息
   %ul
-    %li= link_to "关于我们", about_home_index_path
+    %li= link_to "关于我们", about_path
+    %li= link_to "联系我们", contact_path
     /%li= link_to "我们承诺", root_path
     /%li= link_to "加入我们", "/about/job"
 .ftbox.service
