--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -12,7 +12,7 @@
 .ftbox
   %h3 商务合作
   %ul
-    /%li= link_to "提供优惠信息", root_path
+    %li= link_to "提供优惠信息", root_path
     %li= link_to "验证优惠券", checkcoupon_path
     - if logined? and admin_user?
       %li= link_to "管理后台", admin_products_path
