--- a/app/assets/stylesheets/coupon_index.css
+++ b/app/assets/stylesheets/coupon_index.css
@@ -69,14 +69,22 @@
 }
 #couponmap-title {
     border-bottom: 1px solid #CDCDCD;
-    color: #333333;
+    background: #f0f2f3;
     height: 26px;
+    padding-top: 8px;
+    padding-left: 12px;
+    cursor: pointer;
 }
 #couponmap-title h3{
-    margin-top: 8px;
-    margin-left: 12px;
+    float: left;
     color: #666;
     font-size: 16px;
+}
+#couponmap-title #tips{
+    float: right;
+    color: #666;
+    font-size: 14px;
+    padding-right: 12px;
 }
 
 /* from dldGlobal.css */
