--- a/app/views/home/_map.html.haml
+++ b/app/views/home/_map.html.haml
@@ -2,10 +2,13 @@
 =render "couponmap"
 
 #filter.radius-box-shadow
-  #couponmap-title
-    %h3= t('.map_title')
-  #couponmap
-  = javascript_include_tag "http://api.map.baidu.com/api?v=1.3"
-  :javascript
-    showCouponMap();
+  #map-container
+    #couponmap-title
+      %h3= t('.map_title')
+      #tips= t('.map_tips').html_safe
+
+    #couponmap
+    = javascript_include_tag "http://api.map.baidu.com/api?v=1.3"
+    :javascript
+      showCouponMap();
 
