modify some tips

--- a/app/views/home/contact.html.haml
+++ b/app/views/home/contact.html.haml
@@ -3,9 +3,12 @@
   .mainbox.radius-box-shadow
     %h3= t('.title') 
     %p 联系人：蒋小姐
+    %p QQ号码：2641286358
     %p 移动电话：15944279050
     %p 固定电话：0432-64822789
     %p 电子邮箱：jilinmei@gmail.com
+    %p 新浪微博：http://weibo.com/jilinmei
+    %p 腾讯微博：http://t.qq.com/jilinmeicom
     %br
     %br
 
