--- a/app/views/products/_send_coupon.html.haml
+++ b/app/views/products/_send_coupon.html.haml
@@ -14,5 +14,5 @@
         = show_simple_captcha(:code_type=>"numeric")
       .field-group
         = submit_tag t('.confirm')
-        %input{:type=>"button", :value=>t('.cancel'), :name=>"cancel", :onclick=>"hideModal();"}
+        %input#cancel{:type=>"button", :value=>t('.cancel'), :name=>"cancel"}
 
