--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -41,7 +41,7 @@
                   %span= t('.noimpression')
               %li.listCol.clearfix
                 .button
-                  = link_to t('.send_button'), "#", :onclick=>"showModal();"
+                  = link_to t('.send_button'), "#"
   #deal-intro.cf.radius-box-shadow
     .clearfix.floatLeft
       .discountContentWrap
@@ -51,13 +51,11 @@
 
 #sidebar
   .side-single.radius-box-shadow
-    #mapbox{"data-latitude"=>@product.pos_x, "data-longitude"=>@product.pos_y}
     = javascript_include_tag "http://api.map.baidu.com/api?v=1.3"
-    :javascript
-      showMapBox();
+    #mapbox{"data-latitude"=>@product.pos_x, "data-longitude"=>@product.pos_y}
 
-    #maplink
-      查看大图
+    /#maplink
+    /  查看大图
 
   .side-single.radius-box-shadow
     = render "hot_products"
