--- a/app/views/home/_couponmap.html.erb
+++ b/app/views/home/_couponmap.html.erb
@@ -1,4 +1,5 @@
 <script>
+$(function(){
     function showCouponMap(){
         var map = new BMap.Map("couponmap");
         var point = new BMap.Point(<%= compute_map_center_x(@products) %>, <%= compute_map_center_y(@products) %>);
@@ -27,4 +28,5 @@
             addMarkerContent(point, content);
         <% end %>
     };
+});
 </script>
