--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -47,6 +47,20 @@
       .discountContentWrap
         .discountDetailsInfo
           %h2.title= t('.detail')
+          :css
+            .standard-table { background-color:#c0dcf3; width:100%; border:0; border-collapse:separate; border-spacing:1px; table-layout:fixed; margin-top:5px; }
+            .standard-table .center { text-align:center; }
+            .standard-table .right { text-align:right; }
+            .standard-table th { padding:3px 5px; background-color:#d2e8f9; color:#333; }
+            .standard-table td { padding:3px 5px; word-break:break-all; word-wrap:break-word; }
+            .standard-table tr.comment { background-color:#edf6fd; color:#666; font-weight:bold; }
+            .standard-table tr.normal { background-color:#fff; color:#666; }
+          :css
+            .standard-center { text-align:center; }
+            .standard-bar { padding:3px 6px; color:#fff; border-radius:3px; font-weight:bold; }
+            .standard-list-title { margin:5px 0; }
+            .standard-image { display:block; margin:10px auto; }
+            .standard-image-wrap { display:block; width:100%; }
           %p= @product.content.html_safe
 
 #sidebar
