add standard-bar style

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -57,7 +57,7 @@
             .standard-table tr.normal { background-color:#fff; color:#666; }
           :css
             .standard-center { text-align:center; }
-            .standard-bar { padding:3px 6px; color:#fff; border-radius:3px; font-weight:bold; }
+            .standard-bar { background-color:#37adb1; padding:2px 6px; color:#fff; border-radius:3px; font-weight:bold; }
             .standard-list-title { margin:5px 0; }
             .standard-image { display:block; margin:10px auto; }
             .standard-image-wrap { display:block; width:100%; }
