--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -23,7 +23,7 @@
             %li.listCol
               %label.floatLeft= t('.time')
               .floatLeft.fRSide
-                %span= "#{get_format_time(@product.begin_at)}至#{get_format_time(@product.end_at)}"
+                %span= get_format_time(@product.end_at)
             %li.listCol.clearfix
               = render "discount_type", :product => @product
             %li.listCol.clearfix
@@ -68,7 +68,7 @@
         %li.listCol
           %label.floatLeft= t('.time')
           .floatLeft.fRSide
-            %span= "#{get_format_time(@product.begin_at)}至#{get_format_time(@product.end_at)}"
+            %span= get_format_time(@product.end_at)
         %li.listCol.clearfix
           = render "discount_type", :product => @product
       .sendMobileButton
