add filter by 2 conditions feature

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,7 @@
 = render "map"
 .block-title
   %h3= t('.products_title')
-= render "filters/filter"
+= render "filters/home_filter"
 = render "products/index"
 #sidebar
 
