--- a/app/views/filters/_filter.html.haml
+++ b/app/views/filters/_filter.html.haml
@@ -2,19 +2,19 @@
   .filter-section.type
     %span.label= t('.category')
     %ul
-      %li{:class => (action_name != "today" && action_name != "category" ? "current" : nil)}
-        = link_to t('.all'), root_path
-      %li{:class => (action_name == "today" ? "current" : nil)}
-        = link_to "#{t('.today')}<span>(#{today_product_count})</span>".html_safe, today_filters_path
+      %li{:class => (params[:c_id] == "all" ? "current" : nil)}
+        = link_to t('.all'), "/filters/select/all/#{params[:d_id]}/"
+      /%li{:class => (action_name == "today" ? "current" : nil)}
+      /  = link_to "#{t('.today')}<span>(#{today_product_count})</span>".html_safe, today_filters_path
       - @categories.each do |category|
-        %li{:class => (action_name == "category" && params[:id].to_i == category.id ? "current" : nil)}
-          = link_to "#{category.cn_name}<span>(#{on_shelf_count(category.products)})</span>".html_safe, category_filter_path(category)
+        %li{:class => (params[:c_id] == category.id.to_s ? "current" : nil)}
+          = link_to "#{category.cn_name}<span>(#{category_count(category.products, params[:d_id])})</span>".html_safe, "/filters/select/#{category.id}/#{params[:d_id]}/"
   .filter-section
     %span.label= t('.district')
     %ul
-      %li{:class => (action_name != "district" ? "current" : nil)}
-        = link_to t('.all'), root_path
+      %li{:class => (params[:d_id] == "all" ? "current" : nil)}
+        = link_to t('.all'), "/filters/select/#{params[:c_id]}/all/"
       - @districts.each do |district|
-        %li{:class => (action_name == "district" && params[:id].to_i == district.id ? "current" : nil)}
-          = link_to "#{district.cn_name}<span>(#{on_shelf_count(district.products)})</span>".html_safe, district_filter_path(district)
+        %li{:class => (params[:d_id] == district.id.to_s ? "current" : nil)}
+          = link_to "#{district.cn_name}<span>(#{district_count(district.products, params[:c_id])})</span>".html_safe, "/filters/select/#{params[:c_id]}/#{district.id}/"
 
