--- a/app/views/shared/_dashboard.html.haml
+++ b/app/views/shared/_dashboard.html.haml
@@ -4,7 +4,7 @@
       = link_to t('.my_coupons'), coupons_path
       %span
 
-    %li{:class => (controller_name == "users" ? "current" : nil)}
-      = link_to t('.my_account'), user_path(current_user)
+    %li{:class => (controller_name == "registrations" ? "current" : nil)}
+      = link_to t('.my_account'), edit_user_registration_path(current_user)
       %span
 
