--- a/app/views/simple_captcha/_simple_captcha.erb
+++ b/app/views/simple_captcha/_simple_captcha.erb
@@ -10,7 +10,7 @@
     float: left;
   }
   .simple_captcha .simple_captcha_info {
-    float: right;
+    float: left;
   }
   .simple_captcha .simple_captcha_field input {
     border: 1px solid #CCCCCC;
@@ -43,6 +43,6 @@
     <%= simple_captcha_options[:image] %>
   </div>
   <div class='simple_captcha_info'>
-    <%= "&nbsp;&nbsp;&nbsp;(*必填，请输入图片中的数字)".html_safe %>
+    (*请输入图片中的数字)
   </div>
 </div>
