--- a/app/views/users/registrations/edit.html.haml
+++ b/app/views/users/registrations/edit.html.haml
@@ -1,9 +1,11 @@
 - provide(:title, t('.title'))
+= devise_error_messages!
+
 #content.coupons-box
   = render "shared/dashboard"
   .mainbox.mine
     = render "subbar"
-    = form_for @user do |f|
+    = form_for(resource, :as=>resource_name, :url=>registration_path(resource_name), :html=>{ :method=>:put }) do |f|
       .field-group
         = f.label :name, t('.name')
         = f.text_field :name, :class=>"f-text"
@@ -15,11 +17,17 @@
         = f.text_field :mobile, :class=>"f-text"
       .field-group
         = f.label :password, t('.password')
-        = f.password_field :password, :class=>"f-text"
+        = f.password_field :password, :autocomplete => "off", :class=>"f-text"
+        = t('.password_info').html_safe
       .field-group
         = f.label :password_confirmation, t('.password_confirm')
         = f.password_field :password_confirmation, :class=>"f-text"
       .field-group
+        = f.label :current_password, t('.current_password')
+        = f.password_field :current_password, :class=>"f-text"
+        = t('.current_password_info').html_safe
+      .field-group
         = f.submit t('.update_button'), :class=>"form-button"
-#sidebar
+        %span#signup-span
+          = link_to t('.back_button'), :back
 
