--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -35,7 +35,7 @@
             %li= link_to "未使用", unuse_coupons_path
             %li= link_to "已使用", used_coupons_path
             %li= link_to "个人信息", "#"
-            %li= link_to "账户设置", edit_user_registration_path(current_user), {:class=>"last"}
+            %li= link_to "账户设置", edit_user_registration_path, {:class=>"last"}
       - if user_signed_in?
         %li.login= link_to t('.logout'), destroy_user_session_path, :method => :delete
       - else
