--- a/app/views/shared/_dashboard.html.haml
+++ b/app/views/shared/_dashboard.html.haml
@@ -5,6 +5,6 @@
       %span
 
     %li{:class => (controller_name == "registrations" ? "current" : nil)}
-      = link_to t('.my_account'), edit_user_registration_path(current_user)
+      = link_to t('.my_account'), edit_user_registration_path
       %span
 
