add dealer feature

--- a/app/views/companies/check_coupon.html.haml
+++ b/app/views/companies/check_coupon.html.haml
@@ -1,5 +1,7 @@
 - provide(:title, t('.title'))
+
 #content.pg-login
+  = render "shared/dealer_dashboard"
   .mainbox.radius-box-shadow
     %h2= t('.title')
     .signup-section
