--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -13,9 +13,10 @@
   %h3 商务合作
   %ul
     %li= link_to "提供优惠信息", root_path
-    %li= link_to "商家登录", root_path
-    /%li= link_to "验证优惠券", checkcoupon_path
-    /- if logined? and admin_user?
+    - if !dealer_signed_in?
+      %li= link_to "商家登录", new_dealer_session_path
+    - if dealer_signed_in?
+      %li= link_to "商家后台", check_coupon_companies_path
     - if super_signed_in?
       %li= link_to "管理后台", admin_products_path
 .ftbox
