--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -34,7 +34,7 @@
 .copyright
   %p
     ©2012 吉林美打折网 jilinmei.com
-    吉ICP证100001号 吉公网安备100000000001号
+    吉ICP备12006122号-1
 %div{:style=>"display:none"}
   %script{:src=>"http://s23.cnzz.com/stat.php?id=4669675&web_id=4669675&show=pic", :language=>"JavaScript"}
   :javascript
